<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/citas">
        <menu>
            <item
                android:id="@+id/nav_new_record"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/nueva_cita" />
            <item
                android:id="@+id/nav_search_records"
                android:icon="@drawable/ic_menu_search"
                android:title="@string/buscar_citas" />
            <item
                android:id="@+id/nav_photo_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/fotos" />
        </menu>
    </item>

    <item android:title="@string/especies">
        <menu>
            <item
                android:id="@+id/nav_birds_list"
                android:icon="@drawable/ic_menu_view"
                android:title="@string/lista_de_aves" />
            <item
                android:id="@+id/nav_target_species"
                android:icon="@drawable/ic_menu_zoom"
                android:title="@string/especies_objetivo" />
        </menu>
    </item>

</menu>
